legacy/rust/crates/hwp-core/tests/snapshots/snapshot_tests__table_bug_page_0012.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: page_html
---
<!DOCTYPE html>
<html><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><head><title>연구회 유형 및 지원 예산</title><meta http-equiv="content-type" content="text/html; charset=utf-8"><link rel="stylesheet" type="text/css" href="table-bug_style.css"></head><body><div class="hpa" style="width:210mm;height:297mm;"><div class="hcD" style="left:20mm;top:25mm;"><div class="hcI"><div class="hls ps7" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:170.00mm;"><span class="hrt cs74">[붙임 10]</span></div><div class="hls ps32" style="line-height:237.44mm;white-space:nowrap;left:0.00mm;top:7.41mm;height:237.44mm;width:170.00mm;"><div class="htb" style="left:0.49mm;width:169.96mm;top:0.49mm;height:237.44mm;display:inline-block;position:relative;vertical-align:middle;"><svg class="hs" viewBox="-2.5 -2.5 174.96 242.44" style="left:-2.5mm;top:-2.5mm;width:174.96mm;height:242.44mm;"><defs></defs><path d="M0,0 L0,236.46" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M168.97,0 L168.97,236.46" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,0 L169.03,0" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,11.34 L169.03,11.34" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,236.46 L169.03,236.46" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path></svg><div class="hce" style="left:0mm;top:0mm;width:168.97mm;height:11.34mm;"><div class="hcD" style="left:1.8mm;top:0.5mm;"><div class="hcI" style="top:2.87mm;"><div class="hls ps76" style="line-height:4.59mm;white-space:nowrap;left:3.53mm;top:1.76mm;height:4.59mm;width:158.31mm;"><span class="hrt cs52">거래처 등록을 위한 개인정보 수집・이용・제공 동의서</span></div></div></div></div><div class="hce" style="left:0mm;top:11.34mm;width:168.97mm;height:225.12mm;"><div class="hcD" style="left:1.8mm;top:0.5mm;"><div class="hcI" style="top:0.89mm;"><div class="hls ps69" style="line-height:3.53mm;white-space:nowrap;left:3.53mm;top:1.76mm;height:3.53mm;width:158.31mm;"><span class="hrt cs53">&nbsp;</span><span class="hrt cs3">&nbsp;지급 관련 거래처 신규 등록을 위해 아래와 같이 개인정보를 수집・이용 및 제공 하고자 합니다.&nbsp;</span></div><div class="hls ps69" style="line-height:3.53mm;white-space:nowrap;left:3.53mm;top:6.89mm;height:3.53mm;width:158.31mm;"><span class="hrt cs3">내용을 자세히 읽으신 후 동의 여부를 결정하여 주시기 바랍니다.</span></div><div class="hls ps70" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:11.83mm;height:3.53mm;width:165.37mm;"></div><div class="hls ps70" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:17.64mm;height:3.53mm;width:165.37mm;"><span class="hrt cs55">□ 개인정보 수집·이용 동의</span></div><div class="hls ps70" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:22.76mm;height:3.53mm;width:165.37mm;"><span class="hrt cs56">&nbsp;&nbsp;1. 수집·이용목적 : 수당, 급여 등 각종 지급을 위한&nbsp;</span><span class="hrt cs57">거래처 관리</span></div><div class="hls ps70" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:27.88mm;height:3.53mm;width:165.37mm;"><span class="hrt cs56">&nbsp;&nbsp;2. 수집 항목 :&nbsp;</span><span class="hrt cs58">필수(</span><span class="hrt cs59">이름, 생년월일/주민번호, 예금주명, 계좌번호)</span><span class="hrt cs58">, 선택(주소, 핸드폰, 전화번호)</span></div><div class="hls ps70" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:33.01mm;height:3.53mm;width:165.37mm;"><span class="hrt cs56">&nbsp;&nbsp;3. 이용 및 보유기간 :&nbsp;</span><span class="hrt cs3">계약 종료일로부터 익년 5년간(단 거래 미발생 시 설정한 기간)</span></div><div class="hls ps77" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:38.13mm;height:3.53mm;width:165.37mm;"><span class="hrt cs56">&nbsp;&nbsp;4.&nbsp;</span><span class="hrt cs60">동의를 거부할 수 있으며, 거부 시 거래처 등록 및 수당, 급여 등 각종 지급이 불가합니다.</span></div><div class="hls ps77" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:43.07mm;height:3.53mm;width:165.37mm;"></div><div class="hls ps71" style="line-height:3.88mm;white-space:nowrap;left:0.00mm;top:46.83mm;height:3.88mm;width:165.37mm;"><span class="hrt cs56">개인정보 수집·이용 동의 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><span class="hrt cs63">□ 예 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;□ 아니오&nbsp;</span></div><div class="hls ps70" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:52.29mm;height:3.53mm;width:165.37mm;"></div><div class="hls ps70" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:56.05mm;height:3.53mm;width:165.37mm;"><span class="hrt cs55">□ 개인정보 제3자 제공 동의</span></div><div class="hls ps70" style="line-height:4.23mm;white-space:nowrap;left:0.00mm;top:61.17mm;height:4.23mm;width:165.37mm;"><span class="hrt cs56">&nbsp;&nbsp;1. 제공받는 기관 : 대전광역시교육청 및 산하기관(학교포함)</span></div><div class="hls ps78" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:67.31mm;height:3.53mm;width:165.37mm;"><span class="hrt cs56">&nbsp;&nbsp;2.&nbsp;</span><span class="hrt cs105">제공받는 자의 이용 목적 : 수당, 급여 등 각종 지급을 위한&nbsp;</span><span class="hrt cs106">교육청 및 산하기관(학교포함) 거래처 공유</span></div><div class="hls ps70" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:72.43mm;height:3.53mm;width:165.37mm;"><span class="hrt cs56">&nbsp;&nbsp;3. 이용 및 보유 기간 :&nbsp;</span><span class="hrt cs3">계약 종료일로부터 익년 5년간(단 거래 미발생 시 설정한 기간)</span></div><div class="hls ps70" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:77.55mm;height:3.53mm;width:165.37mm;"><span class="hrt cs56">&nbsp;&nbsp;4. 제공 항목 :&nbsp;</span><span class="hrt cs59">필수(이름, 생년월일, 예금주명, 계좌번호)</span><span class="hrt cs58">, 선택(주소, 핸드폰, 전화번호)</span></div><div class="hls ps79" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:82.68mm;height:3.53mm;width:165.37mm;"><span class="hrt cs56">&nbsp;&nbsp;5. 동의를 거부할수 있으며, 거부시 대전광역시교육청 및 산하기관(학교포함)에서 거래처 정보를 이용할&nbsp;</span></div><div class="hls ps79" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:87.80mm;height:3.53mm;width:165.37mm;padding-left:8.03mm;"><span class="hrt cs56">수 없습니다.(해당 기관에서 신규 등록하여 이용 가능함.)</span></div><div class="hls ps70" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:92.74mm;height:3.53mm;width:165.37mm;"></div><div class="hls ps71" style="line-height:3.88mm;white-space:nowrap;left:0.00mm;top:96.51mm;height:3.88mm;width:165.37mm;"><span class="hrt cs56">개인정보 제3자 제공 동의 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><span class="hrt cs63">□ 예 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;□ 아니오</span></div><div class="hls ps70" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:101.96mm;height:3.53mm;width:165.37mm;"></div><div class="hls ps70" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:105.72mm;height:3.53mm;width:165.37mm;"><span class="hrt cs55">□ 개인정보 제3자 제공 고지</span></div><div class="hls ps70" style="line-height:4.23mm;white-space:nowrap;left:0.00mm;top:110.84mm;height:4.23mm;width:165.37mm;"><span class="hrt cs56">&nbsp;&nbsp;1. 제공받는 기관 : 국세청</span></div><div class="hls ps78" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:116.98mm;height:3.53mm;width:165.37mm;"><span class="hrt cs56">&nbsp;&nbsp;2. 제공받는 자의 이용 목적 :&nbsp;</span><span class="hrt cs57">소득세 징수</span></div><div class="hls ps70" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:122.10mm;height:3.53mm;width:165.37mm;"><span class="hrt cs56">&nbsp;&nbsp;3. 제공 항목 : 이름,&nbsp;</span><span class="hrt cs57">주민등록번호</span></div><div class="hls ps70" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:127.23mm;height:3.53mm;width:165.37mm;"><span class="hrt cs56">&nbsp;&nbsp;4. 제공 근거 : 「소득세법」 제127조</span></div><div class="hls ps70" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:132.17mm;height:3.53mm;width:165.37mm;"></div><div class="hls ps70" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:135.93mm;height:3.53mm;width:165.37mm;"><span class="hrt cs55">□ 주민등록번호 수집</span><span class="hrt cs57">·</span><span class="hrt cs55">제공 고지</span></div><div class="hls ps72" style="line-height:3.53mm;white-space:nowrap;left:-0.35mm;top:141.05mm;height:3.53mm;width:166.07mm;"><span class="hrt cs56">&nbsp;&nbsp;「개인정보보호법」 제 24조의2제1항제1호에 따라 정보주체의 동의 없이 주민등록번호를 수집</span><span class="hrt cs57">·</span><span class="hrt cs56">제공할 수&nbsp;</span></div><div class="hls ps72" style="line-height:3.53mm;white-space:nowrap;left:-0.35mm;top:146.18mm;height:3.53mm;width:166.07mm;padding-left:3.39mm;"><span class="hrt cs56">있습니다.</span></div><div class="hls ps70" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:151.12mm;height:3.53mm;width:165.37mm;"></div><div class="hls ps71" style="line-height:13.51mm;white-space:nowrap;left:0.00mm;top:154.88mm;height:13.51mm;width:165.37mm;"><div class="htb" style="left:1mm;width:177.98mm;top:1mm;height:13.51mm;display:inline-block;position:relative;vertical-align:middle;"><svg class="hs" viewBox="-2.5 -2.5 182.98 18.51" style="left:-2.5mm;top:-2.5mm;width:182.98mm;height:18.51mm;"><defs></defs><path d="M0,0 L0,11.51" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M175.98,0 L175.98,11.51" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,0 L176.04,0" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,11.51 L176.04,11.51" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path></svg><div class="hce" style="left:0mm;top:0mm;width:175.98mm;height:11.51mm;"><div class="hcD" style="left:1.8mm;top:0.5mm;"><div class="hcI" style="top:1.6mm;"><div class="hls ps73" style="line-height:3.18mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.18mm;width:172.38mm;"><span class="hrt cs68">&nbsp;※ 수집된 개인정보는 동의한 목적 외로는 활용하지 않으며&nbsp;</span><span class="hrt cs69">개인정보처리자에게 정정 또는 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;삭제 등을 요구할 수&nbsp;</span></div><div class="hls ps73" style="line-height:3.18mm;white-space:nowrap;left:0.00mm;top:4.13mm;height:3.18mm;width:172.38mm;"><span class="hrt cs70">있습니다.</span></div></div></div></div></div></div><div class="hls ps89" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:170.14mm;height:3.53mm;width:165.37mm;"><span class="hrt cs55">□ 제공되는 개인정보</span></div><div class="hls ps89" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:174.38mm;height:3.53mm;width:165.37mm;"></div><div class="hls ps90" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:178.09mm;height:3.53mm;width:165.37mm;"><div class="hhe" style="display:inline-block;margin-left:0.00mm;width:4.90mm;height:3.53mm;"><span class="hrt cs1" style="font-size:10pt;">1.</span></div><span class="hrt cs3">이름:&nbsp;</span></div><div class="hls ps90" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:181.61mm;height:3.53mm;width:165.37mm;"><div class="hhe" style="display:inline-block;margin-left:0.00mm;width:4.90mm;height:3.53mm;"><span class="hrt cs1" style="font-size:10pt;">2.</span></div><span class="hrt cs3">주민등록번호:</span></div><div class="hls ps90" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:185.14mm;height:3.53mm;width:165.37mm;"><div class="hhe" style="display:inline-block;margin-left:0.00mm;width:4.90mm;height:3.53mm;"><span class="hrt cs1" style="font-size:10pt;">3.</span></div><span class="hrt cs3">계좌번호: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;은행 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></div><div class="hls ps90" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:188.67mm;height:3.53mm;width:165.37mm;"><div class="hhe" style="display:inline-block;margin-left:0.00mm;width:4.90mm;height:3.53mm;"><span class="hrt cs1" style="font-size:10pt;">4.</span></div><span class="hrt cs3">연락처:</span></div><div class="hls ps91" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:196.46mm;height:3.53mm;width:165.37mm;"></div><div class="hls ps92" style="line-height:3.88mm;white-space:nowrap;left:0.00mm;top:199.73mm;height:3.88mm;width:160.08mm;"><span class="hrt cs67">2026 년 &nbsp;&nbsp;&nbsp;&nbsp;월 &nbsp;&nbsp;&nbsp;&nbsp;일</span></div><div class="hls ps92" style="line-height:3.88mm;white-space:nowrap;left:0.00mm;top:204.59mm;height:3.88mm;width:160.08mm;"><span class="hrt cs67">성 &nbsp;명 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(서명)</span></div><div class="hls ps71" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:209.26mm;height:3.53mm;width:165.37mm;"></div><div class="hls ps75" style="line-height:4.59mm;white-space:nowrap;left:0.00mm;top:213.02mm;height:4.59mm;width:160.08mm;"><span class="hrt cs52">대덕소프트웨어마이스터고등학교&nbsp;</span><span class="hrt cs71">귀하</span></div><div class="hls ps74" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:219.35mm;height:3.53mm;width:160.08mm;"></div></div></div></div></div></div></div></div><div class="hpN" style="left:105mm;top:287mm;width:11.43mm;height:3.81mm;"><span class="hrt cs0">- 12 -</span></div></div></body></html>
