legacy/rust/crates/hwp-core/tests/snapshots/snapshot_tests__textbox_hwpx_html.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: html
---
<div class="hwp-body">
<div class="hwp-textbox"><p><span style="font-size: 10.0pt; font-family: '바탕'">글상자</span></p></div><div class="hwp-textbox"><p><span style="font-size: 10.0pt; font-family: '바탕'">그림 </span><span style="font-size: 10.0pt; font-family: '바탕'"> 캡션</span></p></div>
</div>
