legacy/rust/crates/hwp-core/tests/snapshots/snapshot_tests__viewtext_html.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: html
---
<div class="hwp-body">
<p><span style="font-size: 10.0pt; font-family: '바탕'">pyhwp 테스트를 위한 배포 문서 예제입니다.</span></p>
</div>
