legacy/rust/crates/hwp-core/tests/snapshots/snapshot_tests__viewtext_markdown.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: markdown
---
# HWP 문서



**용지 크기**: 210.00mm x 297.00mm



pyhwp 테스트를 위한 배포 문서 예제입니다.
